--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
