--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/x-charts": "^7.11.0",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "apexcharts": "^3.51.0",
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
