--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/x-charts": "^7.11.0",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "apexcharts": "^3.51.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
@@ -24,8 +26,10 @@
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
