--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "yup": "^1.4.0"
   },
