--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@mui/x-charts": "^7.11.0",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "^3.51.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
+    "expensemanagement": "file:",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
